# opa-quotes-storage

./: .coveragerc  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  opa-quotes-storage.code-workspace  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pre-commit.yml
database/: postgresql.conf
database/migrations/: env.py
database/migrations/versions/: 1c7df15853b2_add_retention_policies.py  27db759ff680_create_ohlcv_daily_hypertable.py  5b6e856c52a1_rename_symbol_to_ticker.py  737850d30a66_create_quotes_alias_view.py  9303218b01fe_create_quotes_hypertable.py
docs/: ECOSYSTEM_CONTEXT.md
scripts/backfill/: backfill_ohlcv_daily.py
scripts/monitoring/: report_health.py
scripts/setup/: check_health.py  init_database.sh
src/opa_quotes_storage/: __init__.py  __main__.py  connection.py  health.py  main.py  repository.py
src/opa_quotes_storage/models/: __init__.py  quote.py
tests/integration/: test_backfill_ohlcv_daily.py  test_docker_setup.py  test_migrations.py  test_repository_timescaledb.py
tests/unit/: test_connection.py  test_health.py  test_models.py  test_repository.py
